@@ -1,3 +1,16 @@
+S3method("$",reactvaluesreader)
+S3method("$<-",shinyoutput)
+S3method(as.character,shiny.tag)
+S3method(as.character,shiny.tag.list)
+S3method(as.list,reactvaluesreader)
+S3method(format,shiny.tag)
+S3method(format,shiny.tag.list)
+S3method(names,reactvaluesreader)
+S3method(print,shiny.tag)
+S3method(print,shiny.tag.list)
+S3method(reactive,"function")
+S3method(reactive,default)
+export(HTML)
 export(a)
 export(addResourcePath)
 export(animationOptions)
@@ -21,7 +34,6 @@ export(h5)
 export(h6)
 export(headerPanel)
 export(helpText)
-export(HTML)
 export(htmlOutput)
 export(img)
 export(includeHTML)
@@ -56,8 +68,8 @@ export(sliderInput)
 export(span)
 export(strong)
 export(submitButton)
-export(tableOutput)
 export(tabPanel)
+export(tableOutput)
 export(tabsetPanel)
 export(tag)
 export(tagAppendChild)
@@ -68,20 +80,8 @@ export(textOutput)
 export(uiOutput)
 export(verbatimTextOutput)
 export(wellPanel)
+import(RJSONIO)
 import(caTools)
 import(digest)
-import(RJSONIO)
 import(websockets)
 import(xtable)
-S3method(as.character,shiny.tag)
-S3method(as.character,shiny.tag.list)
-S3method(as.list,reactvaluesreader)
-S3method(format,shiny.tag)
-S3method(format,shiny.tag.list)
-S3method(names,reactvaluesreader)
-S3method(print,shiny.tag)
-S3method(print,shiny.tag.list)
-S3method(reactive,default)
-S3method(reactive,"function")
-S3method("$",reactvaluesreader)
-S3method("$<-",shinyoutput)
